// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Highlighter parses an highlighted attribute of hit object 1`] = `
<span
  className="ais-Highlighter"
>
  <span
    className="ais-Highlighter-nonHighlighted"
  >
    awesome 
  </span>
  <em
    className="ais-Highlighter-highlighted"
  >
    hi
  </em>
  <span
    className="ais-Highlighter-nonHighlighted"
  >
    ghlighted 
  </span>
  <em
    className="ais-Highlighter-highlighted"
  >
    hi
  </em>
  <span
    className="ais-Highlighter-nonHighlighted"
  >
    t!
  </span>
</span>
`;

exports[`Highlighter renders a hit with a custom tag correctly 1`] = `
<span
  className="ais-Highlighter"
>
  <span
    className="ais-Highlighter-nonHighlighted"
  >
    awesome 
  </span>
  <mark
    className="ais-Highlighter-highlighted"
  >
    hi
  </mark>
  <span
    className="ais-Highlighter-nonHighlighted"
  >
    ghlighted 
  </span>
  <mark
    className="ais-Highlighter-highlighted"
  >
    hi
  </mark>
  <span
    className="ais-Highlighter-nonHighlighted"
  >
    t!
  </span>
</span>
`;
